# sortdicom

./: .gitignore  README.md  pyproject.toml
sortdicom/: __init__.py  sortdicom.py
sortdicom/tests/: test_main.py
