[tool.poetry]
name = "sortdicom"
version = "0.4.0"
description = "Sorts and Anonymises Dicoms"
authors = ["Alex Drysdale <alexander.drysdale@wales.nhs.uk>"]
readme = "README.md"
repository = "https://github.com/sbu-physics-mri/sortdicom"
homepage = "https://github.com/sbu-physics-mri/sortdicom"

[tool.poetry.scripts]
sortdicom = "sortdicom.__init__:main"

[tool.poetry.dependencies]
python = "^3.12"
pydicom = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
